# internal/api/api.yml
@@ -1,13 +1,13 @@
 openapi: 3.0.0
 info:
-  title: Influx API Service
+  title: Subset of Influx API covered by Influx CLI
   version: 2.0.0
 servers:
   - url: /api/v2
 paths:
   /health:
     servers:
-      - url: /
+      - url: ''
     get:
       operationId: GetHealth
       tags:
@@ -49,6 +49,42 @@ components:
       schema:
         type: string
   schemas:
+    Error:
+      properties:
+        code:
+          $ref: '#/components/schemas/ErrorCode'
+        message:
+          readOnly: true
+          description: message is a human-readable message.
+          type: string
+        op:
+          readOnly: true
+          description: op describes the logical code operation during error. Useful for debugging.
+          type: string
+        err:
+          readOnly: true
+          description: err is a stack of errors that occurred during processing of the request. Useful for debugging.
+          type: string
+      required:
+        - code
+        - message
+    ErrorCode:
+      description: code is the machine-readable error code.
+      readOnly: true
+      type: string
+      enum:
+        - internal error
+        - not found
+        - conflict
+        - invalid
+        - unprocessable entity
+        - empty value
+        - unavailable
+        - forbidden
+        - too many requests
+        - unauthorized
+        - method not allowed
+        - request too large
     HealthCheck:
       type: object
       required:
@@ -71,43 +107,6 @@ components:
           type: string
     HealthCheckStatus:
       type: string
-      readOnly: true
       enum:
         - pass
         - fail
-    Error:
-      properties:
-        code:
-          $ref: '#/components/schemas/ErrorCode'
-        message:
-          readOnly: true
-          description: message is a human-readable message.
-          type: string
-        op:
-          readOnly: true
-          description: op describes the logical code operation during error. Useful for debugging.
-          type: string
-        err:
-          readOnly: true
-          description: err is a stack of errors that occurred during processing of the request. Useful for debugging.
-          type: string
-      required:
-        - code
-        - message
-    ErrorCode:
-      description: machine-readable error code.
-      readOnly: true
-      type: string
-      enum:
-        - internal error
-        - not found
-        - conflict
-        - invalid
-        - unprocessable entity
-        - empty value
-        - unavailable
-        - forbidden
-        - too many requests
-        - unauthorized
-        - method not allowed
-        - request too large
